--- a/templates/result.html
+++ b/templates/result.html
@@ -7,9 +7,19 @@
     <title>SDV Monitoring Table</title>
 </head>
 <body>
-    <h1>Product of Calculation</h1>
-    <div><h2>Result Table:</h2>
-    {{result_table|safe}}</div>
+    <h2>Result Tables</h2>
+    <br>
+    <div class="container">
+        
+    {{table|safe}}
+    <br>
+    <br>
+    
+
+       </div>
 
 </body>
+<footer>
+    <a href="mailto:r.krebs-wheaton@clinical-evaluation.com">Something not working? Please let me know!</a>
+</footer>
 </html>
